# matplotboard

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  EGamma_TrackingValidation.ipynb  README.md  canvas_wrapper.py  filval_merge.py  graph_vals.py  plotter.py  process_parallel.py  pyproject.toml  report.html  requirements.txt  requirements_dev.txt  result_set.py  setup.py  utils.py
example_01/dashboard/: report.html
example_02/dashboard/: report.html
example_02/dashboard/figures/: exp_b_10.args.json  exp_b_11.args.json  exp_b_12.args.json  exp_b_13.args.json  exp_b_14.args.json  exp_b_15.args.json  exp_b_16.args.json  exp_b_17.args.json  exp_b_18.args.json  exp_b_19.args.json  exp_b_20.args.json  exp_b_5.args.json  exp_b_6.args.json  exp_b_7.args.json  exp_b_8.args.json  exp_b_9.args.json  exp_g_10.args.json  exp_g_11.args.json  exp_g_12.args.json  exp_g_13.args.json  exp_g_14.args.json  exp_g_15.args.json  exp_g_16.args.json  exp_g_17.args.json  exp_g_18.args.json  exp_g_19.args.json  exp_g_20.args.json  exp_g_3.args.json  exp_g_4.args.json  exp_g_5.args.json  exp_g_6.args.json  exp_g_7.args.json  exp_g_8.args.json  exp_g_9.args.json  exp_k_10.args.json  (+163 more)
example_03/dashboard/: report.html
examples/: example_01.py  example_02.py  example_03.py
filval/: histogram.py  histogram_utils.py  plotter.py  plotting.py  result_set.py  utils.py
filval/templates/: dashboard.j2
matplotboard/: __init__.py  __main__.py  matplotboard.py
matplotboard/templates/: base.j2  dump.j2  macros.j2  report.j2  slides.j2
scripts/: generate_class.py  merge.py
(+42 files in other folders)
