[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "matplotboard"
dynamic = ["version"]
description = "Generate simple HTML dashboards using matplotlib"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Caleb Fangmeier", email = "caleb@fangmeier.tech" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = [
    "Jinja2>=2.10",
    "Markdown>=3.0.1",
    "matplotlib>=3.0.3",
    "openssh-wrapper>=0.4",
    "pathos>=0.2.3",
    "python-markdown-math>=0.6",
]
[project.optional-dependencies]
dev = [
    "black>=24.0.0",
]

[project.scripts]
mpb = "matplotboard.__main__:main"

[project.urls]
Homepage = "https://github.com/cfangmeier/matplotboard"

[tool.hatch.version]
path = "matplotboard/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/matplotboard",
]
